# zetachain-crosschain-NFT-project

./: Anchor.toml  COMMAND_DIRECTORY.md  COMPLIANCE.md  CROSS_CHAIN_DEMO_RESULTS.md  DOCUMENTATION_SUMMARY.md  HACKATHON_SUBMISSION.md  QUICK_COMMANDS.md  README.md  REAL_BLOCKCHAIN_PROOF.md  SECURITY.md  SYSTEM_STATUS.md  complete-cross-chain-txn-demo.js  comprehensive-cross-chain-recovery.js  comprehensive-cross-chain-transfers.js  comprehensive-program-workflow.js  comprehensive-test-report.js  comprehensive-tests.sh  comprehensive-workflow-test.js  cross-chain-nft-test.js  cross-chain-wallets.json  custom-metadata-demo.js  demo-cross-chain.js  deploy-and-test.js  ethereum-faucet-helper.js  ethereum-receive-demo.js  fixed-real-demo.js  full-workflow-test.js  fully-real-cross-chain.js  get-funding-info.js  live-network-master-report.js  live-on-chain-demo.js  master-status-report.js  multi-chain-integration.js  network-verification-helper.js  on-chain-program-tests.js  on-chain-verification.js  package-lock.json  package.json  real-cross-chain-demo.js  real-cross-chain-sender.js  (+13 more)
client/: example.ts  tsconfig.json
deployments/: devnet.json  production.json
docs/: API_REFERENCE.md  FAQ.md  (+5 more)
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/: error.rs  lib.rs
programs/universal-nft/src/instructions/: cross_chain_transfer.rs  initialize.rs  mint_nft.rs  mod.rs  receive_cross_chain.rs  verify_ownership.rs
programs/universal-nft/src/state/: cross_chain_state.rs  mod.rs  nft_state.rs
programs/universal-nft/src/utils/: compute.rs  mod.rs  security.rs
(+19 files in other folders)
