[package]
name = "universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain interactions with ZetaChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
mpl-token-metadata = "4.1.2"
solana-program = "1.18"
sha2 = "0.10.8"
bs58 = "0.5.0"
borsh = "1.0.0"
